test/e2e/testdata/separate-app-nets/gateway.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: e2e-separate-app-nets
---
# Gateway A1 on VLAN 100 with app-net-a1
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gw-a1
  namespace: e2e-separate-app-nets
spec:
  gatewayClassName: meridio
  infrastructure:
    parametersRef:
      group: meridio-2.nordix.org
      kind: GatewayConfiguration
      name: gwconfig-a1
  listeners:
  - name: default
    protocol: TCP
    port: 80
---
apiVersion: meridio-2.nordix.org/v1alpha1
kind: GatewayConfiguration
metadata:
  name: gwconfig-a1
  namespace: e2e-separate-app-nets
spec:
  networkAttachments:
  - type: NAD
    nad:
      name: vlan-100
      namespace: e2e-separate-app-nets
      interface: vlan-100
  - type: NAD
    nad:
      name: app-net-a1
      namespace: e2e-separate-app-nets
      interface: net-a1
  networkSubnets:
  - attachmentType: NAD
    cidrs:
    - "169.111.100.0/24"
  horizontalScaling:
    replicas: 2
---
# Gateway A2 on VLAN 200 with app-net-a2
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gw-a2
  namespace: e2e-separate-app-nets
spec:
  gatewayClassName: meridio
  infrastructure:
    parametersRef:
      group: meridio-2.nordix.org
      kind: GatewayConfiguration
      name: gwconfig-a2
  listeners:
  - name: default
    protocol: TCP
    port: 80
---
apiVersion: meridio-2.nordix.org/v1alpha1
kind: GatewayConfiguration
metadata:
  name: gwconfig-a2
  namespace: e2e-separate-app-nets
spec:
  networkAttachments:
  - type: NAD
    nad:
      name: vlan-200
      namespace: e2e-separate-app-nets
      interface: vlan-200
  - type: NAD
    nad:
      name: app-net-a2
      namespace: e2e-separate-app-nets
      interface: net-a2
  networkSubnets:
  - attachmentType: NAD
    cidrs:
    - "169.111.200.0/24"
  horizontalScaling:
    replicas: 2
